--- a/templates/index.html
+++ b/templates/index.html
@@ -113,7 +113,7 @@
                             <div class="mt-3 d-flex gap-2">
                                 {% if project.github_url %}
                                 <a href="{{ project.github_url }}" class="btn btn-sm btn-outline-light" target="_blank">
-                                    <i class="fab fa-github"></i> 源码
+                                    <i class="fab fa-github"></i> 仓库
                                 </a>
                                 {% else %}
                                 <button class="btn btn-sm btn-outline-secondary" disabled>
