--- a/templates/navigation.html
+++ b/templates/navigation.html
@@ -60,6 +60,16 @@
                 </div>
             </div>
         </div>
+        <div class="col-md-3 col-sm-6 mb-3">
+            <div class="card h-100 text-center">
+                <div class="card-body">
+                    <i class="fas fa-building" style="font-size: 2.5rem; color: var(--github-accent);"></i>
+                    <h5 class="mt-3">工作室信息</h5>
+                    <p class="card-text">管理工作室信息</p>
+                    <a href="{{ url_for('admin_studio_info') }}" class="btn btn-primary">访问</a>
+                </div>
+            </div>
+        </div>
         {% endif %}
     </div>
 
