--- a/templates/profile.html
+++ b/templates/profile.html
@@ -211,7 +211,9 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">取消</button>
-                    <button type="submit" class="btn btn-primary">创建项目</button>
+                    <button type="submit" class="btn btn-primary">
+                        <i class="fas fa-save"></i> 创建项目
+                    </button>
                 </div>
             </form>
         </div>
@@ -258,7 +260,9 @@
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" id="cancelCropBtn">取消</button>
                 <button type="button" class="btn btn-primary" id="cropAvatarBtn">裁剪</button>
-                <button type="button" class="btn btn-success" id="saveAvatarBtn">保存头像</button>
+                <button type="button" class="btn btn-success" id="saveAvatarBtn">
+                    <i class="fas fa-save"></i> 保存头像
+                </button>
             </div>
         </div>
     </div>
